add environment to workflows

--- a/.github/workflows/shared-build-image.yml
+++ b/.github/workflows/shared-build-image.yml
@@ -24,6 +24,11 @@ on:
         description: 'The tags to use for the Docker image'
         required: true
         type: string
+      environment:
+        description: 'The environment to use'
+        required: false
+        type: string
+        default: 'dev'
     secrets:
       REGISTRY_USERNAME:
         description: 'The username of the ACR'
@@ -35,6 +40,7 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
 
     steps:
       - name: Checkout to the branch
