inherit secrets, access vars from shared workflows

--- a/.github/workflows/codebreaker-bot-prod.yml
+++ b/.github/workflows/codebreaker-bot-prod.yml
@@ -22,28 +22,21 @@ jobs:
     with:
       project-path: 'ch08/CodeBreaker.Bot/CodeBreaker.Bot.csproj'
       container-repository: 'codebreaker/bot'
-      registry-login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}
       image-tags: '3.9.0.${{ github.run_number }};latest'
       environment: 'Production'
     secrets:
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+      inherit: true
 
   deploy:
     needs: build-and-publish
     uses: ./.github/workflows/shared-deploy-containerapps.yml
     with:
-      container-repository: 'codebreaker/bot'
-      acr-name: ${{ vars.ACR_NAME }}
-      registry-login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}      
+      container-repository: 'codebreaker/bot'   
       container-appname: 'codebreaker-bot-v3'
-      containerapps-environment: ${{ vars.CONTAINERAPPS_ENVIRONMENT }}
       image-tag: '3.9.0.${{ github.run_number }}'
       resource-group: 'rg-codebreaker-prod'
       location: 'westeurope'
       environment: 'Production'
     secrets:
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      inherit: true
       
