--- a/.github/workflows/codebreaker-gameapis.yml
+++ b/.github/workflows/codebreaker-gameapis.yml
@@ -26,25 +26,16 @@ jobs:
     with:
       project-path: 'ch08/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj'
       container-repository: 'codebreaker/gameapis'
-      registry-login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}
       image-tags: '3.9.0-beta.${{ github.run_number }};latest'
-    secrets:
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+    secrets: inherit
 
   deploy:
     needs: build-and-publish
     uses: ./.github/workflows/shared-deploy-containerapps.yml
     with:
-      container-repository: 'codebreaker/gameapis'
-      acr-name: ${{ vars.ACR_NAME }}
-      registry-login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}      
+      container-repository: 'codebreaker/gameapis'   
       container-appname: 'codebreaker-gameapis-v3'
-      containerapps-environment: ${{ vars.CONTAINERAPPS_ENVIRONMENT }}
       image-tag: '3.9.0-beta.${{ github.run_number }}'
       resource-group: 'rg-codebreaker-dev'
       location: 'westeurope'
-    secrets:
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+    secrets: inherit
