--- a/.github/workflows/shared-githubpackages.yml
+++ b/.github/workflows/shared-githubpackages.yml
@@ -40,8 +40,7 @@ jobs:
           dotnet-quality: 'preview'
 
       - name: Setup NuGet source
-        run: dotnet nuget add source --username ${{ inputs.username }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "${{ ARTIFACTS_URL }}/${{ inputs.namespace}}/index.json"
+        run: dotnet nuget add source --username ${{ inputs.username }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "${{ env.ARTIFACTS_URL }}/${{ inputs.namespace}}/index.json"
         
       - name: Publish to the NuGet server (nupkg and snupkg)
         run: dotnet nuget push "packages/*.nupkg" --api-key ${{ secrets.NUGETAPIKEY }} --source ${{ env.ARTIFACTS_URL }}
-        
