--- a/.github/workflows/shared-githubpackages.yml
+++ b/.github/workflows/shared-githubpackages.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Setup NuGet source
         run: dotnet nuget add source --username ${{ inputs.username }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "${{ env.ARTIFACTS_URL }}/${{ inputs.namespace}}/index.json"
         
-      - name: Publish to the NuGet server (nupkg and snupkg)
-        run: dotnet nuget push "packages/*.nupkg" --api-key ${{ secrets.NUGETAPIKEY }} --source ${{ env.ARTIFACTS_URL }}
+      - name: Publish to GitHub Packages (nupkg and snupkg)
+        run: dotnet nuget push "packages/*.nupkg" --source ${{ env.ARTIFACTS_URL }}
