--- a/ch08/Codebreaker.GameAPIs.KiotaClient/Codebreaker.GameAPIs.KiotaClient.csproj
+++ b/ch08/Codebreaker.GameAPIs.KiotaClient/Codebreaker.GameAPIs.KiotaClient.csproj
@@ -6,6 +6,22 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>CNinnovation.Codebreaker.KiotaClient</PackageId>
+    <PackageTags>Codebreaker;CNinnovation;Kiota</PackageTags>
+    <Description>
+      This library contains Kiota-generated classes for communication with the Codebreaker games API service.
+      See https://github.com/codebreakerapp for more information on the complete solution.
+    </Description>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageIcon>codebreaker.jpeg</PackageIcon>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="package/readme.md" Pack="true" PackagePath="\" />
+    <None Include="package/codebreaker.jpeg" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.1.1" />
     <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.0.1" />
