--- a/ch08/Codebreaker.GameAPIs/appsettings.json
+++ b/ch08/Codebreaker.GameAPIs/appsettings.json
@@ -8,5 +8,17 @@
   "AllowedHosts": "*",
   "SolutionEnvironment": "Azure",
   "AzureAppConfigurationUri": "https://appcs-codebreaker42-dev.azconfig.io",
-  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703"
+  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703",
+  "FeatureManagement": {
+    "FeatureGame6x4": true,
+    "FeatureGame8x5": {
+      "EnabledFor": [
+        {
+          "Name": "Microsoft.Percentage",
+          "Parameters": {
+            "Value": 50
+          }
+        }
+      ]}
+  }
 }
