--- a/ch08/workflows/codebreaker-bot-dev.yml
+++ b/ch08/workflows/codebreaker-bot-dev.yml
@@ -1,15 +1,16 @@
-name: gameapis service
+name: bot service
 
 on:
   push:
     branches: 
       [ main ]
     paths:
-    - 'ch08/Codebreaker.GameAPIs/**'
+    - 'ch08/CodeBreaker.Bot/**'
+    - 'ch08/CodeBreaker.Bot.Tests/**'
     - '.github/workflows/shared-test.yml'
     - '.github/workflows/shared-build-image.yml'
     - '.github/workflows/shared-deploy-containerapps.yml'
-    - '.github/workflows/codebreaker-gameapis.yml'
+    - '.github/workflows/codebreaker-bot-dev.yml'
 
   workflow_dispatch:
     
@@ -17,15 +18,15 @@ jobs:
   build-and-test:
     uses: ./.github/workflows/shared-test.yml
     with:
-      project-name: 'Codebreaker.GameAPIs'
-      solution-path: 'ch08/GamesService.sln'
+      project-name: 'Codebreaker.Bot'
+      solution-path: 'ch08/BotService.sln'
 
   build-and-publish:
     needs:  build-and-test
     uses: ./.github/workflows/shared-build-image.yml
     with:
-      project-path: 'ch08/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj'
-      container-repository: 'codebreaker/gameapis'
+      project-path: 'ch08/CodeBreaker.Bot/CodeBreaker.Bot.csproj'
+      container-repository: 'codebreaker/bot'
       image-tags: '3.9.0-beta.${{ github.run_number }};latest'
     secrets: inherit
 
@@ -33,9 +34,10 @@ jobs:
     needs: build-and-publish
     uses: ./.github/workflows/shared-deploy-containerapps.yml
     with:
-      container-repository: 'codebreaker/gameapis'   
-      container-appname: 'codebreaker-gameapis-v3'
+      container-repository: 'codebreaker/bot'     
+      container-appname: 'codebreaker-bot-v3'
       image-tag: '3.9.0-beta.${{ github.run_number }}'
       resource-group: 'rg-codebreaker-dev'
       location: 'westeurope'
     secrets: inherit
+      
