--- a/ch08/workflows/shared-build-image.yml
+++ b/ch08/workflows/shared-build-image.yml
@@ -16,14 +16,15 @@ on:
         description: 'The name of the Docker image'
         required: true
         type: string
-      registry-login-server:
-        description: 'The login server of the ACR'
-        required: true
-        type: string
       image-tags:
         description: 'The tags to use for the Docker image'
         required: true
         type: string
+      environment:
+        description: 'The environment to use'
+        required: false
+        type: string
+        default: 'dev'
     secrets:
       REGISTRY_USERNAME:
         description: 'The username of the ACR'
@@ -35,6 +36,7 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
 
     steps:
       - name: Checkout to the branch
@@ -49,9 +51,9 @@ jobs:
       - name: login to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ inputs.registry-login-server }}
+          login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Build and push image to Azure Container Registry
-        run: dotnet publish -c Release ${{ inputs.project-path }} --os linux --arch x64 -p:PublishProfile=DefaultContainer -p:ContainerRepository=${{ inputs.container-repository }} -p:ContainerImageTags='"${{ inputs.image-tags }}"' -p:ContainerRegistry=${{ inputs.registry-login-server }} -p:ContainerRegistryUsername=${{ secrets.REGISTRY_USERNAME }} -p:ContainerRegistryPassword=${{ secrets.REGISTRY_PASSWORD }} -p:ContainerRegistryUseSSL=true
+        run: dotnet publish -c Release ${{ inputs.project-path }} --os linux --arch x64 -p:PublishProfile=DefaultContainer -p:ContainerRepository=${{ inputs.container-repository }} -p:ContainerImageTags='"${{ inputs.image-tags }}"' -p:ContainerRegistry=${{ vars.REGISTRY_LOGIN_SERVER }} -p:ContainerRegistryUsername=${{ secrets.REGISTRY_USERNAME }} -p:ContainerRegistryPassword=${{ secrets.REGISTRY_PASSWORD }} -p:ContainerRegistryUseSSL=true
