--- a/ch08/workflows/shared-deploy-containerapps.yml
+++ b/ch08/workflows/shared-deploy-containerapps.yml
@@ -6,14 +6,6 @@ on:
       container-repository:
         description: 'The name of the Docker image'
         required: true
-        type: string
-      registry-login-server:
-        description: 'The login server of the ACR'
-        required: true
-        type: string        
-      acr-name:
-        description: 'The name of the ACR (not the login server)'
-        required: true
         type: string       
       container-appname:
         description: 'The name of the container app'
@@ -31,10 +23,11 @@ on:
         description: 'The location of the resource group'
         required: true
         type: string
-      containerapps-environment:
-        description: 'The name of the container app environment'
-        required: true
+      environment:
+        description: 'The environment to use'
+        required: false
         type: string
+        default: 'dev'
     secrets:
       REGISTRY_USERNAME:
         description: 'The username of the ACR'
@@ -49,6 +42,7 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
 
     steps:
       - name: Checkout to the branch
@@ -62,12 +56,12 @@ jobs:
       - name: Build and push container image to registry
         uses: azure/container-apps-deploy-action@v2
         with:
-          imageToDeploy:  ${{ inputs.registry-login-server }}/${{ inputs.container-repository }}:${{ inputs.image-tag }}
-          registryUrl: ${{ inputs.registry-login-server }}
+          imageToDeploy: ${{ vars.REGISTRY_LOGIN_SERVER }}/${{ inputs.container-repository }}:${{ inputs.image-tag }}
+          registryUrl: ${{ vars.REGISTRY_LOGIN_SERVER }} 
           registryUsername: ${{ secrets.REGISTRY_USERNAME }}
           registryPassword: ${{ secrets.REGISTRY_PASSWORD }}
           containerAppName: ${{ inputs.container-appname }}
-          containerAppEnvironment: ${{ inputs.containerapps-environment }}
+          containerAppEnvironment: ${{ vars.CONTAINERAPPS_ENVIRONMENT }}
           resourceGroup: ${{ inputs.resource-group }}
           location: ${{ inputs.location }}
           targetPort: 8080
