--- a/ch09/Codebreaker.Authentication/appsettings.Development.json
+++ b/ch09/Codebreaker.Authentication/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AuthenticationService": {
+    "ConnectionStrings": {
+      "AuthenticationDatabase": "Server=(localdb)\\mssqllocaldb;Database=CodebreakerAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
 }
