--- a/ch09/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch09/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -13,10 +13,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="httpenv.json.user" />
+    <None Include="http-client.env.json.user" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.13" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="2.16.0" />
+    <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="2.16.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
