--- a/ch09/CodeBreaker.Bot/appsettings.Development.json
+++ b/ch09/CodeBreaker.Bot/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SolutionEnvironment": "Local"
+  "CodebreakerBot": {
+    "SolutionEnvironment": "Local"
+  }
 }
