--- a/ch02/Codebreaker.GameAPIs.Analyzers/Codebreaker.Analyzers.csproj
+++ b/ch02/Codebreaker.GameAPIs.Analyzers/Codebreaker.Analyzers.csproj
@@ -5,7 +5,7 @@
     <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>latest</LangVersion>
     <PackageTags>
       Codebreaker;CNinnovation;GameAnalyzers;
     </PackageTags>
@@ -15,6 +15,10 @@
     </Description>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <PackageIcon>codebreaker.jpeg</PackageIcon>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <IsAotCompatible Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))">true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
