--- a/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
+++ b/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
@@ -8,13 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Converters\**" />
-    <EmbeddedResource Remove="Converters\**" />
-    <None Remove="Converters\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-rc.2.23480.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
   
   <ItemGroup>
