--- a/ch03/Codebreaker.GameAPIs/appsettings.Development.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DataStore": "SqlServer",
   "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames2024;trusted_connection=true"
   }
 }
