--- a/ch03/Codebreaker.GameAPIs/appsettings.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.json
@@ -6,9 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStorage": "Cosmos",
+  "DataStore": "SqlServer",
   "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames2024;trusted_connection=true"
+  },
+  "Aspire.Microsoft": {
+    "EntityFrameworkCore": {
+      "SqlServer": {
+        "ConnectionString": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames2024;trusted_connection=true"
+      }
+    }
   }
-
 }
