--- a/ch03/Codebreaker.GameAPIs/appsettings.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.json
@@ -7,13 +7,12 @@
   },
   "AllowedHosts": "*",
   "DataStore": "SqlServer",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames2024;trusted_connection=true"
-  },
-  "Aspire.Microsoft": {
-    "EntityFrameworkCore": {
-      "SqlServer": {
-        "ConnectionString": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames2024;trusted_connection=true"
+  "Aspire": {
+    "Microsoft": {
+      "EntityFrameworkCore": {
+        "SqlServer": {
+          "ConnectionString": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+        }
       }
     }
   }
