EF Core Cosmos updates

--- a/ch03/Codebreaker.GameAPIs/appsettings.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.json
@@ -7,13 +7,7 @@
   },
   "AllowedHosts": "*",
   "DataStore": "SqlServer",
-  "Aspire": {
-    "Microsoft": {
-      "EntityFrameworkCore": {
-        "SqlServer": {
-          "ConnectionString": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-        }
-      }
-    }
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
 }
