ch04 server with updates from ch03
and use of cninnovation nuget packages

--- a/ch04/server/Codebreaker.GameAPIs/appsettings.json
+++ b/ch04/server/Codebreaker.GameAPIs/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStorage": "InMemory",
+  "DataStore": "SqlServer",
   "ConnectionStrings": {
     "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
-
 }
