--- a/ch04/client/Codebreaker.GameAPIs.Client/Codebreaker.GameAPIs.Client.csproj
+++ b/ch04/client/Codebreaker.GameAPIs.Client/Codebreaker.GameAPIs.Client.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
