--- a/ch05/Codebreaker.Data.Cosmos/Codebreaker.Data.Cosmos.csproj
+++ b/ch05/Codebreaker.Data.Cosmos/Codebreaker.Data.Cosmos.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-rc.2.23480.1" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.37.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0" />
   </ItemGroup>
   
   <ItemGroup>
