--- a/ch05/Codebreaker.GameAPIs/appsettings.json
+++ b/ch05/Codebreaker.GameAPIs/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowCreateDatabase":  true,
-  "DataStorage": "SqlServer",
+  "DataStore": "SqlServer",
   "ConnectionStrings": {
     "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
