--- a/ch05/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch05/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.13" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
+    <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.17" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
