Aspire updates chapter 7

--- a/ch07/Codebreaker.GameAPIs/appsettings.json
+++ b/ch07/Codebreaker.GameAPIs/appsettings.json
@@ -6,7 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://appcs-codebreaker42-dev.azconfig.io",
-  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703"
+  "DataStore": "Cosmos",
+  "SolutionEnvironment": "Azure"
 }
