--- a/ch07/Codebreaker.GameAPIs/appsettings.Development.json
+++ b/ch07/Codebreaker.GameAPIs/appsettings.Development.json
@@ -1,2 +1,9 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "DataStore": "Cosmos"
 }
