integration test project

--- a/ch10/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch10/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Codebreaker.GameAPIs.Tests"/>
+    <InternalsVisibleTo Include="Codebreaker.GameAPIs.IntegrationTests"/>
   </ItemGroup>
 
   <ItemGroup>
