change to in-memory config

--- a/ch10/Codebreaker.GameAPIs/appsettings.json
+++ b/ch10/Codebreaker.GameAPIs/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStore": "Cosmos",
-  "SolutionEnvironment": "Azure"
+  "DataStore": "InMemory",
+  "SolutionEnvironment": "Test"
 }
