games api - logging updates

--- a/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch11/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>603964e6-08bc-40f9-8505-074b9466a41f</UserSecretsId>
+    <Configurations>Debug;Release;Debug-Azure;Debug-OnPremises;Release-OnPremises</Configurations>
+	  <DefineConstants>UseAzure</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,7 +20,7 @@
     <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.2.23619.3" />
     <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.6.0-beta.16" />
     <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.6.0-beta.16" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
