--- a/ch11/Codebreaker.GameAPIs/appsettings.json
+++ b/ch11/Codebreaker.GameAPIs/appsettings.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.EntityFrameworkCore": "Information",
+      "Codebreaker": "Trace"
+    },
+    "EventSource": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+
     }
   },
   "AllowedHosts": "*",
