--- a/ch11/Codebreaker.GameAPIs.Tests/Codebreaker.GameAPIs.Tests.csproj
+++ b/ch11/Codebreaker.GameAPIs.Tests/Codebreaker.GameAPIs.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,7 +11,7 @@
 
   <ItemGroup>
 
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" Version="8.1.0" />
 
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 
