--- a/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,5 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../Common.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +8,7 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7a</UserSecretsId>
+    <Configurations>Debug;Release;Debug-Prometheus;Release-Prometheus</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
