grafana and prometheus configurations

--- a/ch11/grafana/config/grafana.ini
+++ b/ch11/grafana/config/grafana.ini
@@ -8,7 +8,7 @@ org_name = Main Org.
 org_role = Admin
 
 # Hide the Grafana version text from the footer and help tooltip for unauthenticated users (default: false)
-hide_version = true
+hide_version = false
 
 [dashboards]
 default_home_dashboard_path = /var/lib/grafana/dashboards/aspnetcore.json
