--- a/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch11/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="../Common.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,8 +7,12 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7a</UserSecretsId>
-    <Configurations>Debug;Release;Debug-Prometheus;Release-Prometheus</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings.Prometheus.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.2.23619.3" />
