--- a/ch05/NativeAOT/Codebreaker.GameAPIs.NativeAOT/Codebreaker.GameAPIs.NativeAOT.csproj
+++ b/ch05/NativeAOT/Codebreaker.GameAPIs.NativeAOT/Codebreaker.GameAPIs.NativeAOT.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.6.0-beta.20" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6-Preview.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 
 </Project>
