update playwright tests

--- a/ch12/Codebreaker.GameAPIs.Playwright/appsettings.json
+++ b/ch12/Codebreaker.GameAPIs.Playwright/appsettings.json
@@ -1,4 +1,5 @@
 {
-  "BaseUrl": "https://codebreaker-gameapis-v4.lemonbeach-ffd0b56b.westeurope.azurecontainerapps.io/",
-  "DelayMoveMS": 300
+  "BaseUrl": "<enter your games api url here>",
+  "DelayMoveMS": 300,
+  "PlayerName": "Test500"
 }
