playwright configurable timing

--- a/ch10/Codebreaker.GameAPIs.Playwright/appsettings.json
+++ b/ch10/Codebreaker.GameAPIs.Playwright/appsettings.json
@@ -1,3 +1,4 @@
 {
-  "BaseUrl": "https://codebreaker-gameapis-v4.lemonbeach-ffd0b56b.westeurope.azurecontainerapps.io/"
+  "BaseURL": "https://codebreaker-gameapis-v4.lemonbeach-ffd0b56b.westeurope.azurecontainerapps.io/",
+  "ThinkTimeMS": 500
 }
