--- a/ch12/Codebreaker.AppHost/appsettings.json
+++ b/ch12/Codebreaker.AppHost/appsettings.json
@@ -6,5 +6,29 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "Cosmos"
+  "DataStore": "Cosmos",
+  "Aspire": {
+    "Microsoft": {
+      "EntityFrameworkCore": {
+        "Cosmos": {
+          "DbContextPooling": true,
+          "Tracing": true,
+          "Metrics": true
+        },
+        "SqlServer": {
+          "DbContextPooling": true,
+          "Tracing": true,
+          "HealthCheck": true,
+          "Metrics": true
+        }
+      }
+    },
+    "StackExchange": {
+      "Redis": {
+        "Tracing": true,
+        "Metrics": true,
+        "HealthCheck": true
+      }
+    }
+  }
 }
