--- a/ch02/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch02/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.5.24152.1" />
+    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.5.24154.1" />
   </ItemGroup>
   
   <ItemGroup>
