ch3 aspire preview 4 updates

--- a/ch03/Codebreaker.AppHost/appsettings.json
+++ b/ch03/Codebreaker.AppHost/appsettings.json
@@ -6,8 +6,5 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "Cosmos",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+  "DataStore": "Cosmos"
 }
