--- a/ch12/CodeBreaker.Blazor/CodeBreaker.Blazor.csproj
+++ b/ch12/CodeBreaker.Blazor/CodeBreaker.Blazor.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
     <Configurations>Debug;Release;</Configurations>
+    <UserSecretsId>fe065f6e-5eb7-40c3-8901-8aa517c53459</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
