--- a/ch12/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
+++ b/ch12/Codebreaker.ServiceDefaults/Codebreaker.ServiceDefaults.csproj
@@ -12,8 +12,8 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Azure.Identity" Version="1.10.4" />
-		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.2.0" />
-		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.3.24105.21" />
+		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.3.0-preview.24155.1" />
+		<PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="8.0.0-preview.5.24156.15" />
 		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
 		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
 		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
