--- a/ch06/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch06/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -8,6 +8,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup>     
+    <ContainerRegistry>codebreakertest.azurecr.io</ContainerRegistry>     
+    <ContainerRepository>codebreaker/bot</ContainerRepository>
+    <ContainerImageTags>3.5.3;latest</ContainerImageTags>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.23" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
