--- a/ch07/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch07/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -7,12 +7,13 @@
     <UserSecretsId>4053495e-84a4-48c2-91d3-4b8290310020</UserSecretsId>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.6.0-beta.23" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.2" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
