--- a/ch07/CodeBreaker.Bot/appsettings.Production.json
+++ b/ch07/CodeBreaker.Bot/appsettings.Production.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps.io"
 }
