ch07 aspire updates

--- a/ch07/Codebreaker.GameAPIs/appsettings.json
+++ b/ch07/Codebreaker.GameAPIs/appsettings.json
@@ -7,5 +7,7 @@
   },
   "AllowedHosts": "*",
   "DataStore": "Cosmos",
-  "SolutionEnvironment": "Azure"
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
+  }
 }
