ch08 - updates from ch07 aspire

--- a/ch08/CodeBreaker.Bot/appsettings.json
+++ b/ch08/CodeBreaker.Bot/appsettings.json
@@ -1,12 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://acs-codebreaker-7fsgtcbtnn5m4-dev.azconfig.io",
-  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
