--- a/ch08/CodeBreaker.Bot/appsettings.Development.json
+++ b/ch08/CodeBreaker.Bot/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps1.io",
+  "ApiBase1": "http://localhost:9400"
 }
