--- a/ch08/Codebreaker.GameAPIs/appsettings.json
+++ b/ch08/Codebreaker.GameAPIs/appsettings.json
@@ -6,20 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://acs-codebreaker-7fsgtcbtnn5m4-dev.azconfig.io",
-  "ManagedIdentityClientId": "2b876f7b-2c61-43ec-8dc8-97e22d3c5866",
-  "FeatureManagement": {
-    "FeatureGame6x4": true,
-    "FeatureGame8x5": {
-      "EnabledFor": [
-        {
-          "Name": "Microsoft.Percentage",
-          "Parameters": {
-            "Value": 50
-          }
-        }
-      ]
-    }
+  "DataStore": "Cosmos",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
 }
