--- a/ch08/Codebreaker.AppHost/Properties/launchSettings.json
+++ b/ch08/Codebreaker.AppHost/Properties/launchSettings.json
@@ -10,7 +10,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16263",
-        "AZURE_USERNAME": "christiannagel@live.com"
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
       }
     }
   }
