--- a/ch08/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch08/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -10,8 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.5.24170.4" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.5.24170.4" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.1.24179.9" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.1.24179.9" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.1.24179.9" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.1.24179.9" />
   </ItemGroup>
   
   <ItemGroup>
