--- a/ch13/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch13/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7a</UserSecretsId>
+    <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7b</UserSecretsId>
     <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
@@ -14,16 +14,32 @@
     <None Remove="appsettings.Prometheus.json" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.3.24105.21" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.3.24105.21" />
+    <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.1.0-preview.*" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.1.0-preview.*" />
   </ItemGroup>
+
+<!--  <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.0.0-preview.5.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.0.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.0.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.0.0-preview.6.*" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.0.0-preview.6.*" />
+  </ItemGroup>-->
   
   <ItemGroup>
-    <ProjectReference Include="..\CodeBreaker.Blazor.Host\CodeBreaker.Blazor.Host.csproj" />
     <ProjectReference Include="..\CodeBreaker.Bot\CodeBreaker.Bot.csproj" />
     <ProjectReference Include="..\Codebreaker.GameAPIs\Codebreaker.GameAPIs.csproj" />
-    <ProjectReference Include="..\Codebreaker.ServiceDefaults\Codebreaker.ServiceDefaults.csproj" IsAspireProjectResource="false" />
+    <ProjectReference Include="..\Codebreaker.Live\Codebreaker.Live.csproj"/>
   </ItemGroup>
 
 </Project>
