--- a/ch13/Codebreaker.AppHost/appsettings.json
+++ b/ch13/Codebreaker.AppHost/appsettings.json
@@ -7,6 +7,10 @@
     }
   },
   "DataStore": "Cosmos",
+  "StartupMode": "Azure",
+  "ConnectionStrings": {
+    "StartupMode": "Connection string startup"
+  },
   "Aspire": {
     "Microsoft": {
       "EntityFrameworkCore": {
